tdf#116411 fix Navigate By Page Next does not move the expected next

page into view

Uses newly introduced GetFirstLastVisPageNumbers function which does
not include pages having only visible bottom or top margins. This
solves the issue of pages with bottom margin remnants in the view
causing Page Next to not move the expected page into view.

Change-Id: Iec05f132b39e1db92be5d13c7d4cc41072dddac0